--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header">
       <h1 class="visually-hidden">Седона - туристический городок в штате Аризона</h1>
-      <img class="logo" src="#" alt="Логотип туристического городка Седона".>
+      <div><img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип туристического городка Седона".></div>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
