Подключает контентное изображение в разделе hero

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
 
     <main class="main-index">
 
+      <section class="hero">
+        <div><img class="hero-image" src="images/index-background.jpg" width="1200" height="485" alt="Природа Седоны: высокие скалистые горы, покрытые лесом".></div>
+        <!-- Пока не знаю, как наложить hero-logo на hero-image -->
+        <!-- <div><img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352" top="51" left="371" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!".></div> -->
+      </section>
+
       <section class="about">
         <h2 class="visually-hidden">О Седоне в двух словах</h2>
         <ul class="about-list">
