--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий <br> городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <div><img src="images/advantage_city.jpg" width="800" height="384" alt="Здания Седоны на фоне гор, деревьев и цветущих растений".></div>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая <br> площадь</h3>
