Подключает второе контентное изображение в разделе advantages

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item">
+            <div><img src="images/advantage_mountains.jpg" width="800" height="384" alt="Природа Седоны: глубокое ущелье, высокие скалистые горы, покрытые лесом".></div>
             <h3 class="advantages-title">Там есть <br> мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
