--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Седона - туристический городок в штате Аризона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
