Подключает шрифты, контентное и декоративное изображение раздела hero на Главной странице

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
     <main class="main-index">
 
       <section class="hero">
-        <div><img class="hero-image" src="images/index-background.jpg" width="1200" height="485" alt="Природа Седоны: высокие скалистые горы, покрытые лесом".></div>
-        <!-- Пока не знаю, как наложить hero-logo на hero-image -->
-        <!-- <div><img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352" top="51" left="371" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!".></div> -->
+        <h2 class="visually-hidden">Добро пожаловать в великолепную Седону, потому что Гранд-Каньон - отстой!</h2>
+        <div><img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352" top="51" left="371" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!".></div>
       </section>
 
       <section class="about">
