--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="page-header">
       <h1 class="visually-hidden">Седона - туристический городок в штате Аризона</h1>
-      <div><img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип туристического городка Седона".></div>
+      <div><img class="logo" src="images/logo.svg" width="140" height="70" alt="Логотип туристического городка Седона"></div>
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -52,7 +52,7 @@
 
       <section class="hero">
         <h2 class="visually-hidden">Добро пожаловать в великолепную Седону, потому что Гранд-Каньон - отстой!</h2>
-        <div><img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352" top="51" left="371" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!".></div>
+        <div><img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352" top="51" left="371" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!"></div>
       </section>
 
       <section class="about">
@@ -62,6 +62,7 @@
             <h3 class="about-title"><strong>Седона — небольшой городок в Аризоне, <br> заслуживающий большего!</strong></h3>
             <p class="about-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </li>
+          </ul>
         </section>
 
       <section class="advantages">
@@ -70,7 +71,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий <br> городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <div><img src="images/advantage_city.jpg" width="800" height="384" alt="Здания Седоны на фоне гор, деревьев и цветущих растений".></div>
+            <div><img src="images/advantage_city.jpg" width="800" height="384" alt="Здания Седоны на фоне гор, деревьев и цветущих растений"></div>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая <br> площадь</h3>
@@ -85,7 +86,7 @@
             <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item">
-            <div><img src="images/advantage_mountains.jpg" width="800" height="384" alt="Природа Седоны: глубокое ущелье, высокие скалистые горы, покрытые лесом".></div>
+            <div><img src="images/advantage_mountains.jpg" width="800" height="384" alt="Природа Седоны: глубокое ущелье, высокие скалистые горы, покрытые лесом"></div>
             <h3 class="advantages-title">Там есть <br> мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
