--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
       <header class="page-header">
         <h1 class="visually-hidden">Седона - туристический городок в штате Аризона</h1>
-        <div><img class="logo" src="images/logo.svg" width="140" height="70"
-            alt="Логотип туристического городка Седона">
-        </div>
+
         <nav class="navigation">
+          <a class="logo" href="#"><img class="logo" src="images/logo.svg" width="140" height="70"
+              alt="Логотип туристического городка Седона">
+          </a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="index.html">Главная</a>
@@ -80,8 +81,9 @@
               <li class="advantages-item">
                 <h3 class="advantages-title">Настоящий <br> городок</h3>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-                <img src="images/advantage_city.jpg" width="800" height="384"
-                  alt="Здания Седоны на фоне гор, деревьев и цветущих растений">
+                <div><img src="images/advantage_city.jpg" width="800" height="384"
+                    alt="Здания Седоны на фоне гор, деревьев и цветущих растений">
+                </div>
               </li>
               <li class="advantages-item">
                 <h3 class="advantages-title">Небольшая <br> площадь</h3>
@@ -104,24 +106,30 @@
             </ul>
           </section>
 
+
           <section class="recommendations">
             <h2 class="visually-hidden">Наши рекомендации</h2>
+
             <ul class="recommendations-list">
               <li class="recommendations-item">
                 <h3 class="recommendations-title">Жильё</h3>
-                <p class="recommendations-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                <p class="recommendations-description">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в
+                  кино!</p>
               </li>
               <li class="recommendations-item">
                 <h3 class="recommendations-title">Еда</h3>
-                <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+                <p class="recommendations-description">Всегда заказывайте топовый фирменный бургер, вы не
+                  разочаруетесь!
                 </p>
               </li>
               <li class="recommendations-item">
                 <h3 class="recommendations-title">Сувениры</h3>
-                <p class="recommendations-description">Не только китайского, но и настоящего местного производства!</p>
+                <p class="recommendations-description">Не только китайского, но и настоящего местного производства!
+                </p>
               </li>
             </ul>
           </section>
+
 
           <section class="invitation">
             <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
