--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </li>
 
             <li class="navigation-item">
-              <a class="navigation-link" href="hotels.html">Гостиницы</a>
+              <a class="navigation-link" href="catalog.html">Гостиницы</a>
             </li>
 
           </ul>
@@ -74,8 +74,16 @@
 
           <section class="hero">
             <h2 class="visually-hidden">Добро пожаловать в великолепную Седону, потому что Гранд-Каньон - отстой!</h2>
-            <div><img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352"
-                alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!"></div>
+
+            <div class="hero-logo-container">
+              <img class="hero-logo" src="images/welcome_sedona.svg" width="458" height="352"
+                alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+            </div>
+
+            <div class="hero-logo-item">
+              <img class="divider" src="images/divider.svg" width="1200" height="57" alt="0">
+            </div>
+
           </section>
 
           <section class="about">
@@ -112,18 +120,18 @@
           <section class="advantages-list-second-line">
 
             <div class="advantages-item">
-              <h3 class="advantages-title">Небольшая <br> площадь</h3>
-              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              <h3 class="advantages-title">НЕБОЛЬШАЯ <br> ПЛОЩАДЬ</h3>
+              <p class="advantages-description">Все достопримечательности <br> находятся очень близко</p>
             </div>
 
             <div class="advantages-item">
-              <h3 class="advantages-title">Красивая <br> дорога</h3>
-              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <h3 class="advantages-title">КРАСИВАЯ <br> ДОРОГА</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
             </div>
 
             <div class="advantages-item">
-              <h3 class="advantages-title">Мало <br> туристов</h3>
-              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+              <h3 class="advantages-title">МАЛО <br> ТУРИСТОВ</h3>
+              <p class="advantages-description">Большинство едет в Гранд <br> Каньон и толпится там</p>
             </div>
 
           </section>
@@ -135,8 +143,8 @@
             </div>
 
             <div class="advantages-item">
-              <h3 class="advantages-title">Там есть <br> мост дьявола</h3>
-              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <h3 class="advantages-title">ТАМ ЕСТЬ <br> МОСТ ДЬЯВОЛА</h3>
+              <p class="advantages-description">Да, по нему можно пройти! <br> Если вы осмелитесь, <br> разумеется</p>
             </div>
 
           </section>
@@ -144,39 +152,41 @@
           <section class="advantages-list-fourth-line">
             <h2 class="visually-hidden">Наши рекомендации</h2>
 
-              <div class="advantages-item">
-                <h3 class="advantages-title">Жильё</h3>
-                <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в
-                  кино!</p>
-              </div>
+            <div class="advantages-item">
+              <h3 class="advantages-title">ЖИЛЬЁ</h3>
+              <p class="advantages-description">Рекомендуем пожить <br> в настоящем мотеле, <br> всё как в
+                кино!</p>
+            </div>
 
-              <div class="advantages-item">
-                <h3 class="advantages-title">Еда</h3>
-                <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не
-                  разочаруетесь!
-                </p>
-              </div>
+            <div class="advantages-item">
+              <h3 class="advantages-title">ЕДА</h3>
+              <p class="advantages-description">Всегда заказывайте <br> топовый фирменный бургер, <br> вы не
+                разочаруетесь!
+              </p>
+            </div>
 
-              <div class="advantages-item">
-                <h3 class="advantages-title">Сувениры</h3>
-                <p class="advantages-description">Не только китайского, но и настоящего местного производства!
-                </p>
-              </div>
+            <div class="advantages-item">
+              <h3 class="advantages-title">СУВЕНИРЫ</h3>
+              <p class="advantages-description">Не только китайского, <br> но и настоящего местного <br> производства!
+              </p>
+            </div>
 
           </section>
 
           <section class="invitation">
             <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-            <ul class="invitation-list">
-              <li class="invitation-item">
-                <h3 class="invitation-title">Заинтересовались?</h3>
-                <p class="invitation-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие
-                  предложения
-                  гостиниц в Седоне</p>
-                <a class="invitation-link" href="#">Поиск гостиницы в Седоне
-                </a>
-              </li>
-            </ul>
+
+            <div class="invitation-item">
+
+              <h3 class="invitation-title">ЗАИНТЕРЕСОВАЛИСЬ?</h3>
+              <p class="invitation-description">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие
+                предложения
+                гостиниц в Седоне</p>
+              <div class="invitation-link-container"><a class="invitation-link" href="#">Поиск гостиницы в Седоне</a>
+              </div>
+
+            </div>
+
           </section>
 
         </div>
@@ -186,46 +196,60 @@
       <footer class="page-footer">
 
         <section class="newsletter">
-          <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
-          <p class="page-footer-title-description">Только полезная информация и никакого спама, честное бойскаутское!
-          </p>
-          <form class="newsletter-form" action="https=//echo.htmlacademy.ru" method="post">
-            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
-              required>
-            <button class="button newsletter-button" type="submit">Подписаться
-            </button>
-          </form>
+
+          <div class="newsletter-item">
+
+            <h2 class="page-footer-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
+            <p class="page-footer-description">Только полезная информация и никакого спама, <br> честное бойскаутское!
+            </p>
+
+            <form class="newsletter-form" action="https=//echo.htmlacademy.ru" method="post">
+
+              <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+                required>
+              <button class="button newsletter-button" type="submit">Подписаться
+              </button>
+
+            </form>
+
+          </div>
+
         </section>
 
-        <section class="footer-social">
+        <section class="footer-contacts-container">
           <h2 class="visually-hidden">Седона в социальных сетях</h2>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a class="button" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">Vkontakte</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Telegram</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Youtube</span>
-              </a>
-            </li>
-          </ul>
-        </section>
 
-        <section class="footer-contacts">
-          <h2 class="visually-hidden">Контакты</h2>
-          <address class="footer-contacts-address">
-            <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </address>
-        </section>
+          <div class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Vkontakte</span>
+            </a>
+          </div>
 
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+          <div class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Telegram</span>
+            </a>
+          </div>
+
+          <div class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </div>
+
+          <div class="footer-contacts">
+            <h2 class="visually-hidden">Контакты</h2>
+
+            <address class="footer-contacts-address">
+              <a class="footer-contacts-address-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            </address>
+
+          </div>
+
+          <div class="htmlacademy-link-container"><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html
+              academy</a></div>
+
+        </section>
 
       </footer>
 
