:heavy_check_mark: Сборка #8

--- a/8/index.html
+++ b/8/index.html
@@ -57,13 +57,13 @@
             </a>
           </li>
 
-          <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!
-              <span class="visually-hidden">
-                Поиск гостиницы в Седоне
-              </span>
-            </a>
-          </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Хочу сюда!
+                <span class="visually-hidden">
+                  Поиск гостиницы в Седоне
+                </span>
+              </a>
+            </li>
 
         </ul>
 
@@ -220,22 +220,26 @@
         <section class="footer-contacts-container">
           <h2 class="visually-hidden">Седона в социальных сетях</h2>
 
-          <div class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Vkontakte</span>
-            </a>
-          </div>
+          <div class="footer-social-list">
 
-          <div class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Telegram</span>
-            </a>
-          </div>
+            <div class="footer-social-item">
+              <a class="footer-social-link footer-social-vk" href="https://vk.com/htmlacademy">
+                Vkontakte
+              </a>
+            </div>
 
-          <div class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Youtube</span>
-            </a>
+            <div class="footer-social-item">
+              <a class="footer-social-link footer-social-tg" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Telegram</span>
+              </a>
+            </div>
+
+            <div class="footer-social-item">
+              <a class="footer-social-link footer-social-yt" href="https://www.youtube.com/user/htmlacademyru">
+                <span>Youtube</span>
+              </a>
+            </div>
+
           </div>
 
           <div class="footer-contacts">
@@ -247,8 +251,11 @@
 
           </div>
 
-          <div class="htmlacademy-link-container"><a class="htmlacademy-link" href="https://htmlacademy.ru/">.html
-              academy</a></div>
+          <div class="htmlacademy-link-container">
+            <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+              <span class="visually-hidden">.html academy</span>
+            </a>
+          </div>
 
         </section>
 
